--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,9 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <includes>${project.build.directory}/generated-sources/antlr4/**</includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
