--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,5 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,macos,maven,eclipse,intellij
+
+setting.xml
