--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,9 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
-
+                <configuration>
+                    <sourceDirectories>${project.build.directory}/generated-sources/antlr4</sourceDirectories>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
