--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,9 @@
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
+                        <configuration>
+                            <includes>${project.build.directory}/generated-sources/antlr4/*</includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
