--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		        <configuration>
 		          <listener>false</listener>
 		          <visitor>true</visitor>
+                  <outputDirectory>${project.build.directory}/generated-sources/antlr4/com/github/python3parser</outputDirectory>
 		        </configuration>
 		        <executions>
 		          <execution>
@@ -147,7 +148,7 @@
                             <goal>prepare-agent</goal>
                         </goals>
                         <configuration>
-                            <includes>${project.build.directory}/generated-sources/antlr4/*</includes>
+                            <includes>${project.build.directory}/generated-sources/antlr4/com/github/python3parser</includes>
                         </configuration>
                     </execution>
                 </executions>
