--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
                 <version>3.0.1</version>
+                <configuration>
+                    <!-- Prevent gpg from using pinentry programs -->
+                    <gpgArguments>
+                        <arg>--pinentry-mode</arg>
+                        <arg>loopback</arg>
+                    </gpgArguments>
+                </configuration>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -181,10 +188,6 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
-                        <configuration>
-                            <keyname>9C19F8B1</keyname>
-                            <passphraseServerId>9C19F8B1</passphraseServerId>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
