--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,13 @@
                         <sourceDirectory>${project.build.directory}/generated-sources/antlr4</sourceDirectory>
                     </sourceDirectories>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                        <version>2.3.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
