--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                         <exclude>**/manipulation/**/*</exclude>
                         <exclude>**/utilities/**/*</exclude>
                         <exclude>**/visitors/exceptions/**/*</exclude>
-                        <exclude>**/target/**/*</exclude>
+                        <exclude>**/generated-sources/**/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
