--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                         <exclude>**/manipulation/**/*</exclude>
                         <exclude>**/utilities/**/*</exclude>
                         <exclude>**/visitors/exceptions/**/*</exclude>
-                        <exclude>${project.build.directory}/generated-sources/**</exclude>
+                        <exclude>${project.build.directory}/target/generated-sources/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
@@ -187,7 +187,7 @@
                         </goals>
                         <configuration>
                             <excludes>
-                                <exclude>${project.build.directory}/generated-sources/**</exclude>
+                                <exclude>${project.build.directory}/target/generated-sources/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
