--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
                         <exclude>**/visitors/exceptions/**/*</exclude>
                         <exclude>**/Python3BaseVisitor.java</exclude>
                         <exclude>**/Python3BaseVisitor.class</exclude>
+                        <exclude>**/antlr4/**/*</exclude>
                         <exclude>${project.build.directory}/target/generated-sources/**</exclude>
                     </excludes>
                 </configuration>
