Excluded target sources from code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
                         <exclude>**/Python3BaseVisitor.class</exclude>
                         <exclude>**/Python3Lexer.class</exclude>
                         <exclude>**/Python3Parser.class</exclude>
+                        <exclude>**/python3parser/Python3Parser.class</exclude>
                         <exclude>**/Python3Parser.java</exclude>
                         <exclude>**/Python3Visitor.class</exclude>
                         <exclude>**/antlr4/**/*.class</exclude>
