--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
                         <exclude>**/Python3Parser.class</exclude>
                         <exclude>**/python3parser/Python3Parser.class</exclude>
                         <exclude>**/Python3Parser.java</exclude>
+                        <exclude>**/Python3Parser*</exclude>
                         <exclude>**/Python3Visitor.class</exclude>
                         <exclude>**/antlr4/**/*.class</exclude>
                     </excludes>
